--- a/Application/Web/View/Public/sidebar.html
+++ b/Application/Web/View/Public/sidebar.html
@@ -21,9 +21,16 @@
 
 							<ul class="submenu">
 								<li class="active">
-									<a href="tables.html">
+									<a href="{:U('Coupon/listview')}">
 										<i class="icon-double-angle-right"></i>
 										优惠券列表
+									</a>
+								</li>
+
+								<li class="active">
+									<a href="{:U('Coupon/analysis')}">
+										<i class="icon-double-angle-right"></i>
+										优惠券报表
 									</a>
 								</li>
 
