--- a/Application/Web/View/Public/sidebar.html
+++ b/Application/Web/View/Public/sidebar.html
@@ -70,7 +70,7 @@
 
 							<ul class="submenu">
 								<li>
-									<a href="form-elements.html">
+									<a href="{:U('Shop/listview')}">
 										<i class="icon-double-angle-right"></i>
 										商户列表
 									</a>
