--- a/Application/Web/View/Coupon/analysis.html
+++ b/Application/Web/View/Coupon/analysis.html
@@ -157,7 +157,7 @@
 						pointStrokeColor : "#fff",
 						pointHighlightFill : "#fff",
 						pointHighlightStroke : "rgba(220,220,220,1)",
-						data : [randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor()]
+						data : [30,10,30,10,15,20,15,30]
 					},
 					{
 						label: "My Second dataset",
